--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-    "name": "seu-nome/meu-projeto-php",
+    "name": "devsidnei/codewars",
     "require": {},
     "autoload": {
         "psr-4": {
-            "SeuNamespace\\": "src/"
+            "CodeWars\\": "src/CodeWars"
         }
     }
 }
